--- a/app/src/main/res/layout/activity_lich_chieu_phim.xml
+++ b/app/src/main/res/layout/activity_lich_chieu_phim.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
 
     <ScrollView
@@ -15,7 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -55,23 +54,22 @@
                         android:id="@+id/editNgay"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:background="@drawable/edit_text_border"
                         android:ems="10"
                         android:inputType="textPersonName"
-                        android:background="@drawable/edit_text_border"
-                        android:text="Name"
                         android:padding="2dp"
+                        android:text="Name"
                         android:textSize="18sp" />
 
                     <ImageButton
                         android:id="@+id/imageLich"
-                        android:padding="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignTop="@+id/editNgay"
-                        android:layout_alignBottom="@+id/editNgay"
                         android:layout_alignRight="@+id/editNgay"
-                        android:src="@drawable/ic_baseline_calendar_today_24"
-                        />
+                        android:layout_alignBottom="@+id/editNgay"
+                        android:padding="5dp"
+                        android:src="@drawable/ic_baseline_calendar_today_24" />
 
                 </RelativeLayout>
 
@@ -82,6 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
                 android:background="#D1CECE" />
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
@@ -102,11 +101,11 @@
                     android:layout_width="80dp"
                     android:layout_height="36dp"
                     android:layout_marginTop="10dp"
-                    android:text="11:30"
+                    android:backgroundTint="#FFFFFF"
                     android:gravity="center"
+                    android:text="11:30"
                     android:textAlignment="center"
                     android:textColor="#000000"
-                    android:background="@drawable/button_border"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/txtTenRap" />
 
@@ -116,11 +115,11 @@
                     android:layout_height="36dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
-                    android:text="12:30"
+                    android:backgroundTint="#FFFFFF"
                     android:gravity="center"
+                    android:text="12:30"
                     android:textAlignment="center"
                     android:textColor="#000000"
-                    android:background="@drawable/button_border"
                     app:layout_constraintStart_toEndOf="@+id/btnGioChieu1"
                     app:layout_constraintTop_toBottomOf="@+id/txtTenRap" />
 
@@ -130,11 +129,11 @@
                     android:layout_height="36dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
-                    android:text="13:45"
+                    android:backgroundTint="#FFFFFF"
                     android:gravity="center"
+                    android:text="13:45"
                     android:textAlignment="center"
                     android:textColor="#000000"
-                    android:background="@drawable/button_border"
                     app:layout_constraintStart_toEndOf="@+id/btnGioChieu2"
                     app:layout_constraintTop_toBottomOf="@+id/txtTenRap" />
 
@@ -144,11 +143,11 @@
                     android:layout_height="36dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
-                    android:text="14:45"
+                    android:backgroundTint="#FFFFFF"
                     android:gravity="center"
+                    android:text="14:45"
                     android:textAlignment="center"
                     android:textColor="#000000"
-                    android:background="@drawable/button_border"
                     app:layout_constraintStart_toEndOf="@+id/btnGioChieu3"
                     app:layout_constraintTop_toBottomOf="@+id/txtTenRap" />
 
@@ -157,11 +156,11 @@
                     android:layout_width="80dp"
                     android:layout_height="36dp"
                     android:layout_marginTop="10dp"
-                    android:text="16:00"
+                    android:backgroundTint="#FFFFFF"
                     android:gravity="center"
+                    android:text="16:00"
                     android:textAlignment="center"
                     android:textColor="#000000"
-                    android:background="@drawable/button_border"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/btnGioChieu1" />
 
@@ -171,11 +170,11 @@
                     android:layout_height="36dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
-                    android:text="17:00"
+                    android:backgroundTint="#FFFFFF"
                     android:gravity="center"
+                    android:text="17:00"
                     android:textAlignment="center"
                     android:textColor="#000000"
-                    android:background="@drawable/button_border"
                     app:layout_constraintStart_toEndOf="@+id/btnGioChieu5"
                     app:layout_constraintTop_toBottomOf="@+id/btnGioChieu2" />
 
@@ -185,11 +184,11 @@
                     android:layout_height="36dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
-                    android:text="17:45"
+                    android:backgroundTint="#FFFFFF"
                     android:gravity="center"
+                    android:text="17:45"
                     android:textAlignment="center"
                     android:textColor="#000000"
-                    android:background="@drawable/button_border"
                     app:layout_constraintStart_toEndOf="@+id/btnGioChieu6"
                     app:layout_constraintTop_toBottomOf="@+id/btnGioChieu3" />
 
@@ -199,11 +198,11 @@
                     android:layout_height="36dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
-                    android:text="18:15"
+                    android:backgroundTint="#FFFFFF"
                     android:gravity="center"
+                    android:text="18:15"
                     android:textAlignment="center"
                     android:textColor="#000000"
-                    android:background="@drawable/button_border"
                     app:layout_constraintStart_toEndOf="@+id/btnGioChieu7"
                     app:layout_constraintTop_toBottomOf="@+id/btnGioChieu4" />
             </androidx.constraintlayout.widget.ConstraintLayout>
