--- a/app/src/main/res/layout/fragment_d_s_phim_dang_chieu.xml
+++ b/app/src/main/res/layout/fragment_d_s_phim_dang_chieu.xml
@@ -39,7 +39,7 @@
                     android:id="@+id/Phim1"
                     android:layout_width="176dp"
                     android:layout_height="251dp"
-                    android:src="@drawable/rom"
+                    android:src="@drawable/onepiece"
 
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:text="Nhất Trung"
+                    android:text="Oda"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     app:layout_constraintStart_toEndOf="@+id/txtDaoDien1"
@@ -70,9 +70,9 @@
 
                 <TextView
                     android:id="@+id/txtTenTL1"
-                    android:layout_width="30dp"
-                    android:layout_height="wrap_content"
-                    android:text="Hài"
+                    android:layout_width="81dp"
+                    android:layout_height="44dp"
+                    android:text="Anime"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +97,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:text="3+"
+                    android:text="16+"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -442,8 +442,8 @@
                     android:layout_height="37dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="20dp"
-                    android:background="#FFF4DB39"
-                    android:backgroundTint="#FFF4DB39"
+                    android:backgroundTint="#F44336"
+
                     android:text="Mua Vé"
                     android:textSize="10sp"
                     app:layout_constraintStart_toEndOf="@+id/imageView"
@@ -453,8 +453,8 @@
                     android:id="@+id/btnChiTiet4"
                     android:layout_width="86dp"
                     android:layout_height="37dp"
-                    android:background="#FFF4DB39"
-                    android:backgroundTint="#FFF4DB39"
+                    android:backgroundTint="#F44336"
+
                     android:text="Chi Tiết"
                     android:textSize="10sp"
                     app:layout_constraintEnd_toEndOf="parent"
