--- a/app/src/main/res/layout/activity_lich_chieu_phim.xml
+++ b/app/src/main/res/layout/activity_lich_chieu_phim.xml
@@ -91,10 +91,17 @@
                     android:id="@+id/txtTenRap"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Galaxy 1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/txtTenTinh"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtTenRap" />
 
                 <Button
                     android:id="@+id/btnGioChieu1"
@@ -107,7 +114,7 @@
                     android:textAlignment="center"
                     android:textColor="#000000"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txtTenRap" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtTenTinh" />
 
                 <Button
                     android:id="@+id/btnGioChieu2"
@@ -121,7 +128,7 @@
                     android:textAlignment="center"
                     android:textColor="#000000"
                     app:layout_constraintStart_toEndOf="@+id/btnGioChieu1"
-                    app:layout_constraintTop_toBottomOf="@+id/txtTenRap" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtTenTinh" />
 
                 <Button
                     android:id="@+id/btnGioChieu3"
@@ -135,7 +142,7 @@
                     android:textAlignment="center"
                     android:textColor="#000000"
                     app:layout_constraintStart_toEndOf="@+id/btnGioChieu2"
-                    app:layout_constraintTop_toBottomOf="@+id/txtTenRap" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtTenTinh" />
 
                 <Button
                     android:id="@+id/btnGioChieu4"
@@ -149,7 +156,7 @@
                     android:textAlignment="center"
                     android:textColor="#000000"
                     app:layout_constraintStart_toEndOf="@+id/btnGioChieu3"
-                    app:layout_constraintTop_toBottomOf="@+id/txtTenRap" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtTenTinh" />
 
                 <Button
                     android:id="@+id/btnGioChieu5"
