--- a/app/src/main/res/layout/activity_lich_chieu_phim.xml
+++ b/app/src/main/res/layout/activity_lich_chieu_phim.xml
@@ -18,7 +18,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:padding="10sp">
 
                 <Spinner
@@ -41,6 +41,15 @@
                     app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
 
                     />
+
+                <Button
+                    android:id="@+id/btnLoc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#2196F3"
+                    android:text="Lọc"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/spinRap" />
 
                 <RelativeLayout
                     android:id="@+id/relativeLayout"
