--- a/app/src/main/res/layout/recyclerview_binhluan.xml
+++ b/app/src/main/res/layout/recyclerview_binhluan.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
@@ -18,64 +18,61 @@
         android:paddingBottom="10dp">
 
         <ImageView
-            android:id="@+id/imageView2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/zoro"
+            android:id="@+id/imgNguoiBinhLuan"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/icon_user" />
 
         <TextView
-            android:id="@+id/txtBinhLuan1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
-            app:layout_constraintTop_toBottomOf="@+id/txtTenNguoiBinhLuan1"
-            app:layout_constraintVertical_bias="0.0"
+            android:id="@+id/txtNoiDungBinhLuan"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
-            android:text="Tao bị lạc rồi !!! ALOOOO !!" />
-
-        <TextView
-            android:id="@+id/txtTenNguoiBinhLuan1"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imgNguoiBinhLuan"
+            app:layout_constraintTop_toBottomOf="@+id/txtTenNguoiBinhLuan"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/txtTenNguoiBinhLuan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            android:text="Zoro"
             android:textColor="#3F51B5"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/imgNguoiBinhLuan"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textViews"
-            app:layout_constraintStart_toStartOf="@+id/txtBinhLuan1"
-            app:layout_constraintTop_toBottomOf="@+id/txtBinhLuan1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ngày bình luận:"
             android:textColor="#2196F3"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@+id/txtNoiDungBinhLuan"
+            app:layout_constraintTop_toBottomOf="@+id/txtNoiDungBinhLuan" />
 
         <TextView
-            android:id="@+id/txtNgayBinhLuan1"
-            app:layout_constraintStart_toEndOf="@+id/textViews"
-            app:layout_constraintTop_toTopOf="@+id/textViews"
+            android:id="@+id/txtNgayBinhLuan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:text="30/10/2020"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@+id/textViews"
+            app:layout_constraintTop_toTopOf="@+id/textViews" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
