--- a/app/src/main/res/layout/fragment_d_s_phim_dang_chieu.xml
+++ b/app/src/main/res/layout/fragment_d_s_phim_dang_chieu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context=".DSPhimDangChieu">
+    tools:context=".packageDanhSachPhim.DSPhimDangChieu">
 
     <ScrollView
         android:layout_width="match_parent"
