--- a/app/src/main/res/layout/activity_thay_doi_thong_tin.xml
+++ b/app/src/main/res/layout/activity_thay_doi_thong_tin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#90CAF9"
-    tools:context=".ThayDoiThongTin">
+    tools:context=".packageThongTinUser.ThayDoiThongTin">
 
     <ImageView
         android:id="@+id/imgHinhDaiDien2"
