--- a/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
+++ b/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#90CAF9"
     android:orientation="vertical"
-    tools:context=".ThongTinFragment">
+    tools:context=".packageTrangChiTiet.ThongTinFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
