--- a/app/src/main/res/layout/fragment_giao_dich.xml
+++ b/app/src/main/res/layout/fragment_giao_dich.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#9FA8DA"
+    android:background="@color/cardview_light_background"
     tools:context=".GiaoDichFragment">
 
     <TextView
@@ -29,7 +29,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="36dp"
         android:text="Danh sách các đơn đặt lịch"
-        android:textColor="#EF5350"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -39,7 +39,7 @@
         android:layout_width="0dp"
         android:layout_height="164dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -49,7 +49,7 @@
     <TextView
         android:id="@+id/txtTTNam"
         android:layout_width="0dp"
-        android:layout_height="32dp"
+        android:layout_height="40sp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="16dp"
@@ -66,7 +66,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="36dp"
         android:text="Tổng tiền mua vé theo tháng"
-        android:textColor="#EF5350"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -74,7 +74,7 @@
     <TextView
         android:id="@+id/txtTTThang"
         android:layout_width="0dp"
-        android:layout_height="37dp"
+        android:layout_height="40sp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
@@ -86,7 +86,7 @@
     <Spinner
         android:id="@+id/spinnerThang"
         android:layout_width="69dp"
-        android:layout_height="39dp"
+        android:layout_height="40sp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
@@ -99,11 +99,11 @@
         android:layout_width="111dp"
         android:layout_height="45dp"
         android:layout_marginStart="28dp"
-        android:layout_marginTop="196dp"
+        android:layout_marginTop="63dp"
         android:text="Tổng tiền mua vé theo năm"
-        android:textColor="#EF5350"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/txtHoVaTen" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
