--- a/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
+++ b/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#90CAF9"
     android:orientation="vertical"
-    tools:context=".packageTrangChiTiet.ThongTinFragment">
+    tools:context=".ThongTinFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -17,7 +16,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -52,11 +51,13 @@
                 <TextView
                     android:id="@+id/textView3"
                     android:layout_width="110dp"
-                    android:layout_height="20dp"
+                    android:layout_height="25dp"
                     android:layout_marginTop="32dp"
-                    android:text="Email đăng nhập"
-                    android:textColor="#EF5350"
+                    android:layout_marginBottom="30dp"
+                    android:text="Email"
+                    android:textColor="@color/cardview_dark_background"
                     android:textSize="16sp"
+                    app:layout_constraintBottom_toTopOf="@+id/textView4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.053"
                     app:layout_constraintStart_toStartOf="parent"
@@ -65,10 +66,10 @@
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="0dp"
-                    android:layout_height="22dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="30dp"
                     android:text="Số điện thoại"
-                    android:textColor="#EF5350"
+                    android:textColor="@color/cardview_dark_background"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="@+id/textView3"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -78,10 +79,10 @@
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="0dp"
-                    android:layout_height="22dp"
-                    android:layout_marginTop="28dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="23dp"
                     android:text="Ngày sinh"
-                    android:textColor="#EF5350"
+                    android:textColor="@color/cardview_dark_background"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="@+id/textView4"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -91,10 +92,10 @@
                 <TextView
                     android:id="@+id/textView6"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="28dp"
                     android:text="Địa chỉ"
-                    android:textColor="#EF5350"
+                    android:textColor="@color/cardview_dark_background"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="@+id/textView5"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -108,9 +109,9 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="32dp"
                     android:layout_marginEnd="16dp"
-                    android:background="#FFE0B2"
                     android:onClick="ThayDoiThongTin"
                     android:text="Thay đổi thông tin"
+                    android:background="@drawable/custom_button"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -125,9 +126,10 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="16dp"
-                    android:background="#FFE0B2"
+                    android:background="@drawable/custom_button"
                     android:onClick="ThayDoiMatKhau"
                     android:text="Thay Đổi Mật Khẩu"
+
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -137,7 +139,7 @@
                 <TextView
                     android:id="@+id/txtEmailDangNhap"
                     android:layout_width="0dp"
-                    android:layout_height="25dp"
+                    android:layout_height="35sp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="29dp"
                     android:layout_marginEnd="16dp"
@@ -149,7 +151,7 @@
                 <TextView
                     android:id="@+id/txtSDT"
                     android:layout_width="0dp"
-                    android:layout_height="26dp"
+                    android:layout_height="35sp"
                     android:layout_marginTop="16dp"
                     android:gravity="center_vertical"
                     app:layout_constraintEnd_toEndOf="@+id/txtEmailDangNhap"
@@ -159,7 +161,7 @@
                 <TextView
                     android:id="@+id/textView10"
                     android:layout_width="0dp"
-                    android:layout_height="29dp"
+                    android:layout_height="35sp"
                     android:layout_marginTop="16dp"
                     android:gravity="center_vertical"
                     app:layout_constraintEnd_toEndOf="@+id/txtSDT"
@@ -170,7 +172,7 @@
                 <TextView
                     android:id="@+id/txtDiaChi"
                     android:layout_width="0dp"
-                    android:layout_height="33dp"
+                    android:layout_height="35sp"
                     android:layout_marginTop="16dp"
                     android:gravity="center_vertical"
                     app:layout_constraintEnd_toEndOf="@+id/textView10"
